[gd_scene load_steps=3 format=3 uid="uid://celisoatyrp7p"]

[ext_resource type="Script" path="res://Attacks/area_field.gd" id="1_oomub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_akg5p"]

[node name="AreaField" type="Area2D"]
collision_layer = 16
script = ExtResource("1_oomub")

[node name="Line2D" type="Line2D" parent="."]
closed = true
width = 3.0
default_color = Color(1, 0.976471, 0.839216, 1)

[node name="FieldArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_akg5p")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
